--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1> This page is currently under construction....</h1>
-    <footer>git: <a href="https://github.com/pritending"></a></footer>
+    <footer>git: <a href="https://github.com/pritending">https://github.com/pritending</a></footer>
   </body>
 </html>
