--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!Doctype HTML>
 <html>
   <head>
-    Pritending
+    pritending
   </head>
   <body>
-    <h1> This page is currently under construction....</h1>
+    <h1> this page is currently under construction....</h1>
     <footer>git: <a href="https://github.com/pritending">https://github.com/pritending</a></footer>
   </body>
 </html>
